--- a/leave-management-system/package.json
+++ b/leave-management-system/package.json
@@ -2,13 +2,16 @@
   "name": "leave-management-system",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://marque6299.github.io/leave-tracker",
   "description": "A leave management application with user authentication and role-based access",
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.38.0",
@@ -24,6 +27,7 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "gh-pages": "^6.1.0",
     "typescript": "^5.0.2"
   },
   "browserslist": {
